Make author and book description dynamic and fix overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,10 @@ body {
   @apply shadow-btn-shadow py-2 px-6 rounded-full;
 }
 
+.link {
+  @apply text-main hover:underline
+}
+
 h1,
 h2,
 h3 {
@@ -85,5 +89,8 @@ h3 {
 
   .scrollbar::-webkit-scrollbar-thumb:hover {
     background: #e3d6ec;
+  }
+  .break-anywhere {
+    overflow-wrap: anywhere;
   }
 }
